--- a/notebooks/clean-data.ipynb
+++ b/notebooks/clean-data.ipynb
@@ -35,9 +35,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#remover concentimento e \"Variável Personalizada\"\n",
+    "#remover ids\n",
     "survey_f00 = survey_raw.drop(survey_raw.columns[\n",
-    "    np.r_[6:14, #Referência externa, Variável Personalizada(1 a 5), email, lista\n",
+    "    np.r_[6:14, #Referência externa, Variável ids\n",
     "    25:29], # termos de concentimento\n",
     "], \n",
     "    axis=1)"
@@ -195,7 +195,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.0 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -209,9 +209,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.8.5"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "32f2fe102a4f10662d8c13f75131e1ba377b7194060421a642fdea27c55fc65a"
